--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ body {
 	font-size: 40px;
 	letter-spacing: 1.8px;
 	word-spacing: 1px;
-	background: -webkit-linear-gradient(#eee, #333);
+	background: -webkit-linear-gradient(rgb(174, 255, 154), rgb(32, 69, 138));
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	padding: 5px;
